<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity" android:background="#FFFFFF" android:backgroundTint="#FFFFFF">
    <Button
            android:text="@string/newGameBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnNewGame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnRanking" android:backgroundTint="#43A047"
            android:textSize="30sp" android:onClick="startNewGame" android:textColor="#FFFFFF"/>
    <Button
            android:text="@string/rankingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnRanking"
            app:layout_constraintStart_toStartOf="@+id/btnNewGame" app:layout_constraintEnd_toEndOf="@+id/btnNewGame"
            app:layout_constraintTop_toBottomOf="@+id/btnNewGame" android:layout_marginTop="8dp"
            android:textSize="30sp" android:onClick="showRankingActivity" android:backgroundTint="#3949AB"
            android:textColor="#FFFFFF"/>
    <Button
            android:text="@string/optionsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnOptions"
            app:layout_constraintEnd_toEndOf="@+id/btnRanking"
            app:layout_constraintStart_toStartOf="@+id/btnRanking"
            app:layout_constraintTop_toBottomOf="@+id/btnRanking" android:layout_marginTop="8dp"
            android:textSize="30sp"/>
    <Button
            android:text="@string/exitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnExit"
            app:layout_constraintEnd_toEndOf="@+id/btnOptions"
            app:layout_constraintStart_toStartOf="@+id/btnOptions" app:layout_constraintTop_toBottomOf="@+id/btnOptions"
            android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp" android:textSize="30sp" android:onClick="closeApp"
            android:backgroundTint="#E53935" android:textColor="#FFFFFF"/>
    <Button
            android:text="@string/continueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textSize="30sp" android:onClick="continueGame"
            android:backgroundTint="#FFB300" android:layout_marginTop="32dp" android:textColor="#FFFFFF"/>
    <TextView
            android:text="@string/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/btnNewGame"
            android:fontFamily="@font/caesar_dressing" android:textStyle="bold" android:textSize="45sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>